--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -12,3 +12,9 @@ $btn-border-radius: 4px
     &.v-card__text--scrollable
         max-height: 300px
         overflow-y: auto
+
+.v-input
+    &.error--text
+        .v-input__control
+            .v-input__slot
+                border-color: red !important
